# social-scheduler

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/cron/: crontab.example
config/projects/: example.yaml
scripts/: archive_week.py  cleanup_archive.py  create_week.py  install_cron.sh  run_scheduler.py  setup_local.sh  validate_projects.py
src/social_scheduler/: __init__.py  api.py  archive_ops.py  constants.py  db.py  models.py  paths.py  project_config.py  scheduler.py  weeks.py
tests/: test_archive_cleanup.py
